# spbu_2020_c_homeworks

./: CMakeLists.txt
.github/workflows/: build_with_lint.yml
homework_1/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
homework_2/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
homework_3/: list.c  list.h  main  main.c  task_1.c  task_2.c
homework_4/: task_1.c  task_2.c  task_3.c
homework_5/: task_1.c  task_2.c
homework_6/: task_1.c  test.txt
homework_7/: input.txt  task_1.c  task_2.c
homework_8/: task_1.c
test_1/: complex.c  complex.h  list.c  list.h  task_1.c  task_2.c
test_2/: task_1.c  task_2.c  task_3.c  test.txt
test_3/: task_1.c  task_2.c
